Requires
~~~~~~~~
- CPSI18n >= 1.0.0
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Made the MultiSelect Widget do case-insensitive sorting.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 