@@ -6,6 +6,8 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
+- Fixed #1844 : "It is impossible to import a vocabulary with items having
+  accented characters in keys".
 - Made the MultiSelect Widget do case-insensitive sorting.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
